# server-reason-react-starter

./: .gitignore  LICENSE  dune-project  run-dev-server.sh  server-reason-react-starter.opam
client/: build.mjs  index.html  package.json
client/src/: App.re  Document.re  Style.re  dune
common/src/: dune
server/src/: dune  server.ml
server/src/.running/: built_at.txt
server/src/database/: article.re  example.re
