(melange.emit
 (module_systems
  (es6 "re.js"))
 (target app)
 (preprocess
  (pps melange.ppx reason-react-ppx))
 (libraries
  common
  melange.belt
  melange-webapi
  reason-react
  melange.dom
  melange.js))

(rule
 (alias app)
 (deps
  (package server-reason-react)
  (alias_rec melange)
  (:script ../build.mjs)
  (:entrypoints "app/client/src/App.re.js")
  (source_tree node_modules)
  (file ../package.json)
  (source_tree lib/server-reason-react/esbuild-plugin))
 (action
  (run
   node
   %{script}
   %{entrypoints}
   --output=client
   --extract=true
   --env=%{env:DEMO_ENV='production'})))

(include_subdirs qualified)
